Table "cache" {
  "key" varchar(255) [pk, not null]
  "value" mediumtext [not null]
  "expiration" int [not null]
}

Table "cache_locks" {
  "key" varchar(255) [pk, not null]
  "owner" varchar(255) [not null]
  "expiration" int [not null]
}

Table "coaches" {
  "id" bigint [pk, not null, increment]
  "user_id" bigint [not null]
  "coach_number" varchar(255) [not null]
  "name" varchar(255) [not null]
  "email" varchar(255) [not null]
  "avatar" varchar(255) [default: NULL]
  "bio" text
  "specialties" json [default: NULL]
  "badges" json [default: NULL]
  "language" json [default: NULL]
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]

  Indexes {
    coach_number [unique, name: "coaches_coach_number_unique"]
    email [unique, name: "coaches_email_unique"]
    user_id [name: "coaches_user_id_foreign"]
  }
}

Table "failed_jobs" {
  "id" bigint [pk, not null, increment]
  "uuid" varchar(255) [not null]
  "connection" text [not null]
  "queue" text [not null]
  "payload" longtext [not null]
  "exception" longtext [not null]
  "failed_at" timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    uuid [unique, name: "failed_jobs_uuid_unique"]
  }
}

Table "job_batches" {
  "id" varchar(255) [pk, not null]
  "name" varchar(255) [not null]
  "total_jobs" int [not null]
  "pending_jobs" int [not null]
  "failed_jobs" int [not null]
  "failed_job_ids" longtext [not null]
  "options" mediumtext
  "cancelled_at" int [default: NULL]
  "created_at" int [not null]
  "finished_at" int [default: NULL]
}

Table "jobs" {
  "id" bigint [pk, not null, increment]
  "queue" varchar(255) [not null]
  "payload" longtext [not null]
  "attempts" tinyint [not null]
  "reserved_at" int [default: NULL]
  "available_at" int [not null]
  "created_at" int [not null]

  Indexes {
    queue [name: "jobs_queue_index"]
  }
}

Table "migrations" {
  "id" int [pk, not null, increment]
  "migration" varchar(255) [not null]
  "batch" int [not null]
}

Table "model_has_permissions" {
  "permission_id" bigint [not null]
  "model_type" varchar(255) [not null]
  "model_id" bigint [not null]

  Indexes {
    (permission_id, model_id, model_type) [pk]
    (model_id, model_type) [name: "model_has_permissions_model_id_model_type_index"]
  }
}

Table "model_has_roles" {
  "role_id" bigint [not null]
  "model_type" varchar(255) [not null]
  "model_id" bigint [not null]

  Indexes {
    (role_id, model_id, model_type) [pk]
    (model_id, model_type) [name: "model_has_roles_model_id_model_type_index"]
  }
}

Table "password_reset_tokens" {
  "email" varchar(255) [pk, not null]
  "token" varchar(255) [not null]
  "created_at" timestamp [default: NULL]
}

Table "permissions" {
  "id" bigint [pk, not null, increment]
  "name" varchar(255) [not null]
  "guard_name" varchar(255) [not null]
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]

  Indexes {
    (name, guard_name) [unique, name: "permissions_name_guard_name_unique"]
  }
}

Table "personal_access_tokens" {
  "id" bigint [pk, not null, increment]
  "tokenable_type" varchar(255) [not null]
  "tokenable_id" bigint [not null]
  "name" text [not null]
  "token" varchar(64) [not null]
  "abilities" text
  "last_used_at" timestamp [default: NULL]
  "expires_at" timestamp [default: NULL]
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]

  Indexes {
    token [unique, name: "personal_access_tokens_token_unique"]
    (tokenable_type, tokenable_id) [name: "personal_access_tokens_tokenable_type_tokenable_id_index"]
    expires_at [name: "personal_access_tokens_expires_at_index"]
  }
}

Table "role_has_permissions" {
  "permission_id" bigint [not null]
  "role_id" bigint [not null]

  Indexes {
    (permission_id, role_id) [pk]
    role_id [name: "role_has_permissions_role_id_foreign"]
  }
}

Table "roles" {
  "id" bigint [pk, not null, increment]
  "name" varchar(255) [not null]
  "guard_name" varchar(255) [not null]
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]

  Indexes {
    (name, guard_name) [unique, name: "roles_name_guard_name_unique"]
  }
}

Table "sessions" {
  "id" varchar(255) [pk, not null]
  "user_id" bigint [default: NULL]
  "ip_address" varchar(45) [default: NULL]
  "user_agent" text
  "payload" longtext [not null]
  "last_activity" int [not null]

  Indexes {
    user_id [name: "sessions_user_id_index"]
    last_activity [name: "sessions_last_activity_index"]
  }
}

Table "users" {
  "id" bigint [pk, not null, increment]
  "name" varchar(255) [not null]
  "email" varchar(255) [not null]
  "email_verified_at" timestamp [default: NULL]
  "password" varchar(255) [not null]
  "two_factor_secret" text
  "two_factor_recovery_codes" text
  "two_factor_confirmed_at" timestamp [default: NULL]
  "remember_token" varchar(100) [default: NULL]
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]

  Indexes {
    email [unique, name: "users_email_unique"]
  }
}

Ref "coaches_user_id_foreign":"users"."id" < "coaches"."user_id" [delete: cascade]

Ref "model_has_permissions_permission_id_foreign":"permissions"."id" < "model_has_permissions"."permission_id" [delete: cascade]

Ref "model_has_roles_role_id_foreign":"roles"."id" < "model_has_roles"."role_id" [delete: cascade]

Ref "role_has_permissions_permission_id_foreign":"permissions"."id" < "role_has_permissions"."permission_id" [delete: cascade]

Ref "role_has_permissions_role_id_foreign":"roles"."id" < "role_has_permissions"."role_id" [delete: cascade]
